--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>GedehWolve</title>
     <link rel="icon" href="logo.png">
-    <link rel="stylesheet" href="gedehwolve.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body id="body">
     <!-- maincontrol -->
